# lastfmpp

./: CMakeLists.txt  LICENSE  lastfmconfig.hpp  user.hpp  utilities.hpp
cmake/: FindJBSON.cmake
include/lastfmpp/: affiliation.hpp  album.hpp  artist.hpp  date.hpp  error.hpp  event.hpp  exports.hpp  image.hpp  lastfmpp.hpp  location.hpp  mbid.hpp  params.hpp  service.hpp  shout.hpp  tag.hpp  track.hpp  uri.hpp  user.hpp  venue.hpp  wiki.hpp
include/lastfmpp/detail/: deserialise_affiliation.hpp  deserialise_album.hpp  deserialise_artist.hpp  deserialise_event.hpp  deserialise_ext.hpp  deserialise_image.hpp  deserialise_location.hpp  deserialise_mbid.hpp  deserialise_shout.hpp  deserialise_tag.hpp  deserialise_track.hpp  deserialise_user.hpp  deserialise_venue.hpp  deserialise_wiki.hpp  error.hpp  hana_optional.hpp  params.hpp  service_access.hpp  service_impl.hpp  transform.hpp
src/lastfmpp/: affiliation.cpp  album.cpp  artist.cpp  error.cpp  event.cpp  image.cpp  location.cpp  service.cpp  service_impl.cpp  shout.cpp  tag.cpp  track.cpp  user.cpp  venue.cpp  wiki.cpp
test/: CMakeLists.txt  artist_getinfo_alt.json  lastfm_album_test.cpp  lastfm_artist_test.cpp  lastfm_event_test.cpp  lastfm_track_test.cpp  lastfm_venue_test.cpp  params_test.cpp  service_test.cpp  test_main.cpp
